--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,15 +1,22 @@
 {
-    "name": "CRUL",
-    "short_name": "CRUL",
-    "start_url": "index.html",
-    "display": "standalone",
-    "background-color": "#0a192f",
-    "theme-color": "#0a192f",
-    "icons": [
-        {
-            "src": "",
-            "sizes": "192x192",
-            "type": "image/png"
-        }
-    ]
+  "name": "CRUL",
+  "short_name": "CRUL",
+  "scope": "/",
+  "start_url": "/",
+  "description": "Generate AI images using your descriptions",
+  "icons": [
+    {
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "theme_color": "#0a192f",
+  "background_color": "#000",
+  "display": "standalone"
 }
