--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tensorflow-models/coco-ssd": "^2.2.2",
+    "@tensorflow-models/mobilenet": "^2.1.0",
+    "@tensorflow/tfjs": "^4.2.0",
     "file-saver": "^2.0.5",
     "loadash": "^1.0.0",
     "lodash": "^4.17.21",
